AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
.nav-user-info{
    margin-top: 16px;
    display: inline-block;
    color: black;
    margin-left:5px;
}
.user-info {
    padding-left:15px;
    float: left;
    display: block;
    font-size: 12px;
    margin-top: 10px;
    font-family: myriadpro-regular;
}

.user-info:before {
    content: "";
    clear: both;
}
.navbar-right .user-image {
    height: 50px;
    width: 50px;
}
.user-image {
    border-radius: 50%;
    margin-top: 5px;
    margin-bottom: 5px;
    float:left;
}


.user-detail {
    font-size: 13px;
    font-family: myriadpro-regular;
    line-height: 12px;
}
.date-font{
    font-size: 11px;
}

